deleted and modified some files

--- a/cssfiles/style.css
+++ b/cssfiles/style.css
@@ -41,7 +41,7 @@ body{
 
 }
 .footer{
-	background:#0F0D32;
+	background:#050327;
 	padding: 2rem 3.5rem;
 }
 .logo{
@@ -96,7 +96,7 @@ body{
 	color: #d5d5d5;
 }
 .divider{
-	border:1px solid #8c94b8;
+	border:1px solid #ecedf1;
 	margin:0.5rem 0rem;
 }
 .webright{
